fixing color contrast text hero

--- a/finalproject/styles/siteplan.css
+++ b/finalproject/styles/siteplan.css
@@ -97,7 +97,7 @@
 }
 
 .hero-content h1 {
-    color: var(--white);
+    color: var(--inspiration-gold);
     font-family: "Merriweather", serif;
     font-size: 1.30rem;
     line-height: 1.1;
